# xlsx_cfg_prj

./: CMakeLists.txt  build.sh  clearBuild.sh  readme.txt
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/ccp_read_cfg_prj/: Makefile  cmake_install.cmake  main_prj_CXX_cotire.cmake
Debug/ccp_read_cfg_prj/cotire/: main_prj_CXX_prefix.cxx  main_prj_CXX_prefix.hxx
Debug/lib_prj/: Makefile  cmake_install.cmake
ccp_read_cfg_prj/: CMakeLists.txt  convert_proto.py  main.cc  proto_test.cc  proto_test.h  stdafx.h  version.h  version.h.in
ccp_read_cfg_prj/cfg_mgr/: achieve.cpp  achieve.h  card_info.cpp  card_info.h  cfg_mgr.cpp  cfg_mgr.h  test_cfg_mgr.cc  test_cfg_mgr.h
ccp_read_cfg_prj/cfg_proto/: achieve.bytes  achieve.proto  card_info.bytes  card_info.proto
excel_to_proto_prj/: excel_to_proto_task.txt
excel_to_proto_prj/excel/: achieve.xlsx  card_info.xlsx
excel_to_proto_prj/py/: BuildAll.py  BuildBytes.py  BuildCpp.py  BuildCppCfgFile.py  BuildCppCfgMgrFile.py  BuildLua.py  BuildProto.py  base.py  cfg.py  test.py
excel_to_proto_prj/py/xlrd-0.9.4/: readme.txt
lib_prj/: CMakeLists.txt
lib_prj/src/: vtime.cc  vtime.h
vs_prj/: vs_prj.sln
vs_prj/py/: py.pyproj
vs_prj/vs_prj/: vs_prj.vcxproj  vs_prj.vcxproj.filters
